fix(ui): fix text truncation on api cards
By adding stylelint to this project the text truncation on api cards broke.
By disabling the rule value-no-vendor-prefix for the relevant css we can avoid this for the future.

Fixes: PAS-3346

--- a/src/app/components/api-card/api-card.component.scss
+++ b/src/app/components/api-card/api-card.component.scss
@@ -42,7 +42,8 @@
 }
 
 .content-text {
-  display: box;
+  /* stylelint-disable-next-line value-no-vendor-prefix */
+  display: -webkit-box;
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   overflow: hidden;
